--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
+<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
 <title>orient</title>
 <style>
 	* {
@@ -46,7 +47,7 @@
 			document.querySelector('.lsMsg').classList.remove('active');			
 		}
 	}
-	
+
 	window.addEventListener("orientationchange", function() {
 		orientchange();
 	}, false);
