--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 		justify-content: center;
 	}
 	input {
-		width: 400px;
+		width: 80%;
+		max-width: 400px;
 		height: 50px;
 	}
 	.lsMsg {
@@ -49,7 +50,9 @@
 	}
 
 	window.addEventListener("orientationchange", function() {
-		orientchange();
+		setTimeout(function(){
+			orientchange()
+		}, 200)
 	}, false);
 </script>
 </head>
