--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 	}
 
 	window.addEventListener("orientationchange", function() {
+		alert(window.orientation);
+		
 		setTimeout(function(){
 			orientchange()
 		}, 200)
