--- a/index.html
+++ b/index.html
@@ -13,29 +13,42 @@
 		height: 100%;
 	}
 	.wrapper {
-		background-color: #e7e187;
-		display: flex;
-		align-items: center;
-		justify-content: center;
+	  background-color: #e7e187;
+	  display: -webkit-box;
+	  display: -ms-flexbox;
+	  display: flex;
+	  -webkit-box-align: center;
+	      -ms-flex-align: center;
+		  align-items: center;
+	  -webkit-box-pack: center;
+	      -ms-flex-pack: center;
+		  justify-content: center;
 	}
 	input {
-		width: 80%;
-		max-width: 400px;
-		height: 50px;
+	  width: 80%;
+	  max-width: 400px;
+	  height: 50px;
 	}
 	.lsMsg {
-		position: fixed;
-		width: 100%;
-		height: 100%;
-		background: rgba(0, 0, 0, 0.88);
-		align-items: center;
-		justify-content: center;
-		color: #fff;
-		font-size: 25px;
-		display: none;
+	  position: fixed;
+	  width: 100%;
+	  height: 100%;
+	  background: rgba(0, 0, 0, 0.88);
+	  -webkit-box-align: center;
+	      -ms-flex-align: center;
+		      -ms-grid-row-align: center;
+		  align-items: center;
+	  -webkit-box-pack: center;
+	      -ms-flex-pack: center;
+		  justify-content: center;
+	  color: #fff;
+	  font-size: 25px;
+	  display: none;
 	}
 	.lsMsg.active {
-		display: flex;		
+	  display: -webkit-box;
+	  display: -ms-flexbox;
+	  display: flex;		
 	}
 </style>
 <script>
