--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		height: 100%;
 	}
 	.wrapper {
-	  background-color: #e7e187;
+	  background-color: #cbe787;
 	  display: -webkit-box;
 	  display: -ms-flexbox;
 	  display: flex;
@@ -62,9 +62,7 @@
 		}
 	}
 
-	window.addEventListener("orientationchange", function() {
-		alert(window.orientation);
-		
+	window.addEventListener("orientationchange", function() {		
 		setTimeout(function(){
 			orientchange()
 		}, 200)
