--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
 <div class="lsMsg">Landscape</div>
 <div class="wrapper">
-	<input type="text">
+	<input type="date">
 </div>
 </body>
 </html>
